ui-kit/android/v4/extensions.mdx
---
title: "Extensions"
description: "Extensions — CometChat documentation."
---

## Overview

CometChat’s UI Kit comes with built-in support for a wide variety of extensions that provide additional functionality. These extensions enhance the chatting experience, making it more interactive, secure, and efficient.

Activating any of the extensions in CometChat is a simple process done through your application's dashboard. Refer to our guide For detailed information on [Extensions](/fundamentals/extensions-overview)

Once you have successfully enabled the desired extension in your dashboard, it will be reflected in your CometChat application upon initialization and successful login. Please note, that the extension features will only be available if they are supported by CometChat UI Kit.

CometChat’s UI Kit offers built-in support for 12 powerful extensions. This seamless integration makes it easy for you to enhance your chat application with engaging features without any extra coding effort. Just enable the desired extensions from the CometChat Dashboard, and they will be automatically reflected in the relevant components of your application, providing a richer and more engaging experience for your users.

## Built-in Extensions

Here's a guide on how you can enable and integrate these extensions:

### Stickers

The Stickers extension allows users to express their emotions more creatively. It adds a much-needed fun element to the chat by allowing users to send various pre-designed stickers. For a comprehensive understanding and guide on implementing and using the Sticker Extension, refer to our specific guide on the [Sticker Extension](/fundamentals/stickers).

Once you have successfully activated the [Sticker Extension](/fundamentals/stickers) from your CometChat Dashboard, the feature will automatically be incorporated into the [Message Composer](/ui-kit/android/v4/message-composer) component of UI Kits.

<Frame>
  <img src="/images/5f6f49e6-stickers_extension_cometchat-697209ee4eb7f0eacc8bba9d21e9c69d.png" />
</Frame>

### Polls

The Polls extension enhances group discussions by allowing users to create polls. Users can ask questions with a predefined list of answers, enabling a quick, organized way to gather group opinions. For a comprehensive understanding and guide on implementing and using the Polls Extension, refer to our specific guide on the [Polls Extension](/fundamentals/polls).

Once you have successfully activated the [Polls Extension](/fundamentals/polls) from your CometChat Dashboard, the feature will automatically be incorporated into the Action Sheet of the [Message Composer](/ui-kit/android/v4/message-composer) component of UI Kits.

<Frame>
  <img src="/images/57b426e1-polls_extension_cometchat-12dc9ee6dade4f6da111620bdbf5d0a4.png" />
</Frame>

### Collaborative Whiteboard

The Collaborative Whiteboard extension facilitates real-time collaboration. Users can draw, brainstorm, and share ideas on a shared digital whiteboard. For a comprehensive understanding and guide on implementing and using the Collaborative Whiteboard Extension, refer to our specific guide on the [Collaborative Whiteboard Extension](/fundamentals/collaborative-whiteboard).

Once you have successfully activated the [Collaborative Whiteboard Extension](/fundamentals/collaborative-whiteboard) from your CometChat Dashboard, the feature will automatically be incorporated into the Action Sheet of the [Message Composer](/ui-kit/android/v4/message-composer) component of UI Kits.

<Frame>
  <img src="/images/d0d0e5c9-collaborative_whiteboard_extension_cometchat-02cc52e365e7e7a4070f2a7d0f6275cd.png" />
</Frame>

### Collaborative Document

With the Collaborative Document extension, users can work together on a shared document. This feature is essential for remote teams where document collaboration is a recurring requirement. For a comprehensive understanding and guide on implementing and using the Collaborative Document Extension, refer to our specific guide on the [Collaborative Document Extension](/fundamentals/collaborative-document).

Once you have successfully activated the [Collaborative Document Extension](/fundamentals/collaborative-document) from your CometChat Dashboard, the feature will automatically be incorporated into the Action Sheet of the [Message Composer](/ui-kit/android/v4/message-composer) component of UI Kits.

<Frame>
  <img src="/images/0edf6e4c-collaborative_writeboard_extension_cometchat-c1e6a72b11bc3f9b30c814ab865ce973.png" />
</Frame>

### Message Reactions

Message Reactions extension lets users express their emotions towards a message by choosing from a range of emojis. It provides a quick way to respond to any shared message. For a comprehensive understanding and guide on implementing and using the Message Reactions Extension, refer to our specific guide on the [Message Reactions Extension](/fundamentals/reactions).

Once you have successfully activated the [Message Reactions Extension](/fundamentals/reactions) from your CometChat Dashboard, the feature will automatically be incorporated into the Action Sheet of [MessageList Component](/ui-kit/android/v4/message-list) component of UI Kits.

<Frame>
  <img src="/images/f4d54197-reaction_extension_cometchat-e52db36075b489640341dc2a75050a28.png" />
</Frame>

### Message Translation

The Message Translation extension in CometChat is designed to translate any message into your local locale. It eliminates language barriers, making the chat more inclusive. For a comprehensive understanding and guide on implementing and using the Message Translation Extension, refer to our specific guide on the [Message Translation Extension](/fundamentals/message-translation).

Once you have successfully activated the [Message Translation Extension](/fundamentals/message-translation) from your CometChat Dashboard, the feature will automatically be incorporated into the Action Sheet of [MessageList Component](/ui-kit/android/v4/message-list) component of UI Kits.

<Frame>
  <img src="/images/aa61355d-translation_extension_cometchat-b5840c4ac3ecbadc5cb4e6e7f4e1aee5.png" />
</Frame>

### Link Preview

The Link Preview extension provides a summary of the URL shared in the chat. It includes the title, a description, and a thumbnail image from the web page. For a comprehensive understanding and guide on implementing and using the Link Preview Extension, refer to our specific guide on the [Link Preview Extension](/fundamentals/link-preview).

Once you have successfully activated the [Link Preview Extension](/fundamentals/link-preview) from your CometChat Dashboard, the feature will automatically be incorporated into the Message Bubble of [MessageList Component](/ui-kit/android/v4/message-list) component of UI Kits.

<Frame>
  <img src="/images/cf15c051-link_preview_extension_cometchat-7f4ce66abed668bcf2bef224f59d14fe.png" />
</Frame>

### Profanity Filter

The Profanity Filter extension helps in maintaining the chat decorum by censoring obscene and inappropriate words in the messages. For a comprehensive understanding and guide on implementing and using the Profanity Filter Extension, refer to our specific guide on the [Legacy Extensions](https://assets.cometchat.io/legacy-docs/moderation/legacy-extensions.html).

Once you have successfully activated the Profanity Filter Extension from your CometChat Dashboard, the feature will automatically be incorporated into the Message Bubble of [MessageList Component](/ui-kit/android/v4/message-list) component of UI Kits.

<Frame>
  <img src="/images/8de65d87-profanity_filter_extension_cometchat-cc11375e5afd2be8c8a926ef72523041.png" />
</Frame>

### Data Masking

The Data Masking extension helps secure sensitive data by masking information like credit card numbers and phone numbers in a chat message. For a comprehensive understanding and guide on implementing and using the Data Masking Extension, refer to our specific guide on the [Legacy Extensions](https://assets.cometchat.io/legacy-docs/moderation/legacy-extensions.html).

Once you have successfully activated the Data Masking Extension from your CometChat Dashboard, the feature will automatically be incorporated into the Message Bubble of [MessageList Component](/ui-kit/android/v4/message-list) component of UI Kits.

<Frame>
  <img src="/images/3a785d75-data_masking_extension_cometchat-e800190beb2176fd860e0824b976ac33.png" />
</Frame>

### Image Moderation

The Image Moderation extension uses machine learning to detect and filter out inappropriate or explicit images shared in the chat. For a comprehensive understanding and guide on implementing and using the Image Moderation Extension, refer to our specific guide on the [Legacy Extensions](https://assets.cometchat.io/legacy-docs/moderation/legacy-extensions.html).

Once you have successfully activated the Image Moderation Extension from your CometChat Dashboard, the feature will automatically be incorporated into the Message Bubble of [MessageList Component](/ui-kit/android/v4/message-list) component of UI Kits.

<Frame>
  <img src="/images/d085f5a0-image_moderation_extension_cometchat-f8f21a42b9f600ca7f7a6f74bc2d3d27.png" />
</Frame>

### Thumbnail Generation

The Thumbnail Generation extension automatically creates a smaller preview image whenever a larger image is shared, helping to reduce the upload/download time and bandwidth usage. For a comprehensive understanding and guide on implementing and using the Thumbnail Generation Extension, refer to our specific guide on the [Thumbnail Generation Extension](/fundamentals/thumbnail-generation).

Once you have successfully activated the [Thumbnail Generation Extension](/fundamentals/thumbnail-generation) from your CometChat Dashboard, the feature will automatically be incorporated into the Message Bubble of [MessageList Component](/ui-kit/android/v4/message-list) component of UI Kits.

<Frame>
  <img src="/images/60b49371-thumbnail_generation_extension_cometchat-0a242c7d386fb6a577c82a01b89d627e.png" />
</Frame>

### Smart Replies

Smart Replies extension provides automated, predictive text responses, making the conversation more efficient by reducing the response time. For a comprehensive understanding and guide on implementing and using the Smart Replies Extension, refer to our specific guide on the [Smart Replies Extension](/fundamentals/smart-replies).
